--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -136,8 +136,9 @@ $tabs-border: #bbb;
 // added by criscom 05.09.2013
 
 $S: 30em; // 480px wide with 16px body font
-$M: 48em; // 768px wide with 16px body font
-$L: 57em; // 912px wide with 16px body font
+$M: 43.75em; // 700px wide with 16px body font
+$L: 60em; // 960px wide with 16px body font
+$XL: 72.5em; // 1160px wide with 16px body fonto
 // =============================================================================
 // Partials to be shared with all .scss files.
 // =============================================================================
