--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -56,7 +56,7 @@ $zen-auto-include-item-base: false;
 }
 
 /* Navigation bar */
-@media all and (min-width: 480px) {
+// @media all and (min-width: 480px) {
   #main {
     /* Move all the children of #main down to make room. */
     padding-top: $nav-height;
@@ -69,7 +69,17 @@ $zen-auto-include-item-base: false;
     height: $nav-height;
     width: $zen-grid-width;
   }
-}
+// }
+
+// Move the Navigation positioning out of the media query
+// So that it remains on top also on small devices
+  // #navigation {
+  //   /* Move the navbar up inside #main's padding. */
+  //   position: absolute;
+  //   top: 0;
+  //   height: $nav-height;
+  //   width: $zen-grid-width;
+  // }
 
 } // End of @if $zen-reverse-all-floats == true
 
