--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -55,8 +55,14 @@
   @if $canvas == Sextra {
   @media only screen and (max-width: $Sextra) { // 520
     @content;
+    }
   }
+  @else if $canvas == Mminor {
+  @media only screen and (max-width: $M) { // 481 - 700
+    @content;
+    }
   }
+
   @else if $canvas == M {
     @media only screen and (max-width: $M) { // 481 - 700
       @content;
