--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -137,7 +137,8 @@ $tabs-border: #bbb;
 
 $S: 30em; // 480px wide with 16px body font
 $Sextra: 32.5em; // 520px wide with 16 px body font
-$M: 43.75em; // 700px wide with 16px body font
+$Mminor: 37.5em; // 600px for second sidebar
+$M: 44.25em; // 708px wide with 16px body font
 $L: 60em; // 960px wide with 16px body font
 $XL: 72.5em; // 1160px wide with 16px body fonto
 // =============================================================================
