--- a/sass/_einstern.scss
+++ b/sass/_einstern.scss
@@ -9,7 +9,7 @@
  * @import "einstern";
  */
 
-  /*! © EINSTERN Internet Serives 2013 www.einstern.at / pilcrow-studio.com / SASS used */
+  /*! © EINSTERN Internet Services 2014 www.einstern.at / www.stefflhof.at/adventures / SASS used */
 
  // criscom: Variable from SAFCD _layout.scss line 22
 $border-box-sizing: true;
