--- a/sass/_adventures.scss
+++ b/sass/_adventures.scss
@@ -831,10 +831,11 @@ padding-left: 0.5em;
   line-height: 1;
   padding: 0;
   min-height: 206px;
+  float: left; // criscom 01.07.2015
   @include MQ(XL) {
   }
-  @media only screen and (min-width: 961px) and (max-width: 67.3125em) {
-    // min-height: 225px;
+  @media only screen and (min-width: 481px) and (max-width: 960px) {
+    display: none;
   }
   @include MQ(Sextra) {
     min-height: 209px;
@@ -851,14 +852,15 @@ padding-left: 0.5em;
   @extend %front-teaser-385-23;
   @extend %adv-gradient-sulmsee;
   min-height: 209px;
+  float: left; // criscom 01.07.2015
   .ie & {
     min-height: 211px;
   }
   @media only screen and (max-width: 1200px) {
     min-height: 206px;
   }
-  @include MQ(L) {
-    width: 66.0833333%;
+  @media only screen and (min-width: 481px) and (max-width: 960px) {
+    width: 100%;
     margin-right: 0;
   }
   @include MQ(S) {
@@ -902,6 +904,7 @@ padding-left: 0.5em;
   margin-right: 0;
   color: white;
   @extend %adv-gradient;
+  float: left; // criscom 01.07.2015
   @include MQ(L) {
     margin-top: 24px;
     margin-top: 1.5rem;
@@ -922,6 +925,7 @@ padding-left: 0.5em;
   @extend %front-teaser-385-23;
   @extend %adv-gradient-ergebnisse;
   min-height: 285px;
+  float: left;
   @include MQ(L) {
     width: 100%;
   }
